# DCoNA

./: .gitignore  .gitmodules  README.md  build.sh  cli.py  config.json  hypergeom.bash  pyproject.toml  setup.py  zscore.bash  ztest.bash
.github/workflow/: wheels.yml
.github/workflows/: build.yml  pypi.yml  test_build.yml  test_pypi.yml  toc.yml
common/: hypergeom_common.py  ztest_common.py
core/utils/: dump.py  utils.py
dcona/: __init__.py  __main__.py
dcona/common/: __init__.py  hypergeom_common.py  wrapped_pipelines.py  zscore_common.py
dcona/core/: __init__.py
dcona/core/correlations/: __init__.py  correlation_tests.py  correlation_utils.py
dcona/core/utils/: __init__.py  dump.py  utils.py
dcona/exhaustive/: warmup.py  zscore.py
dcona/lib/: __init__.py  dump.py  hypergeom.py  hypergeom_ntw.py  utils.py  wrapped_pipelines.py  zscore.py  ztest.py
dcona/native/: CMakeLists.txt
dcona/native/src/correlations/: correlations.cpp  correlations.h
dcona/native/src/lib/: correlations.cpp  pipelines.cpp  scores.cpp  utils.cpp
dcona/native/src/pipelines/: pipelines.cpp
dcona/native/src/scores/: scores.cpp  scores.h
dcona/native/src/tests/: tests.cpp  tests.h
dcona/native/src/tqdm/: progressbar.h  tqdm.h
example/: README.md  example.ipynb  hypergeom.bash  readme.md  zscore.bash
example/configs/: config.json
example/data/: data.csv  description.csv  interactions.csv
exhaustive/: exhaustive_hypergeom.py  hypergeom.py  warmup.py  zscore.py  ztest.py
network/: hypergeom_test.py  score_pipeline.py  zscore.py  ztest.py  ztest_pipeline.py
(+5 files in other folders)
